--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.6",
-    "react-native-url-polyfill": "^1.3.0"
+    "react-native-url-polyfill": "^1.3.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
